crates/pg_syntax/tests/snapshots/postgres_regress/gin@32.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "create function execute_text_query_index(query_sql text)\nreturns setof text\nlanguage plpgsql\nas\n$$\nbegin\n  set enable_seqscan = off;\n  set enable_bitmapscan = on;\n  return query execute query_sql;\nend;\n$$;"
---
CreateFunctionStmt@0..205
  Create@0..6 "create"
  Whitespace@6..7 " "
  Function@7..15 "function"
  Whitespace@15..16 " "
  Ident@16..40 "execute_text_query_index"
  Ascii40@40..41 "("
  FunctionParameter@41..55
    Ident@41..50 "query_sql"
    Whitespace@50..51 " "
    TypeName@51..55
      TextP@51..55 "text"
  Ascii41@55..56 ")"
  Newline@56..57 "\n"
  Returns@57..64 "returns"
  Whitespace@64..65 " "
  Setof@65..70 "setof"
  Whitespace@70..71 " "
  TypeName@71..75
    TextP@71..75 "text"
  Newline@75..76 "\n"
  DefElem@76..92
    Language@76..84 "language"
    Whitespace@84..85 " "
    Ident@85..92 "plpgsql"
  Newline@92..93 "\n"
  DefElem@93..204
    As@93..95 "as"
    Newline@95..96 "\n"
    List@96..204
      Sconst@96..204 "$$\nbegin\n  set enable ..."
  Ascii59@204..205 ";"

