crates/pg_syntax/tests/snapshots/postgres_regress/gin@38.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "select gin_clean_pending_list('t_gin_test_tbl_i_j_idx') is not null;"
---
SelectStmt@0..68
  Select@0..6 "select"
  Whitespace@6..7 " "
  ResTarget@7..67
    NullTest@7..67
      FuncCall@7..54
        Ident@7..29 "gin_clean_pending_list"
        Ascii40@29..30 "("
        AConst@30..54
          Sconst@30..54 "'t_gin_test_tbl_i_j_idx'"
      Ascii41@54..55 ")"
      Whitespace@55..56 " "
      Is@56..58 "is"
      Whitespace@58..59 " "
      Not@59..62 "not"
      Whitespace@62..63 " "
      NullP@63..67 "null"
  Ascii59@67..68 ";"

