crates/pg_syntax/tests/snapshots/postgres_regress/gin@43.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "select count(*) from t_gin_test_tbl where j @> array[50];"
---
SelectStmt@0..57
  Select@0..6 "select"
  Whitespace@6..7 " "
  ResTarget@7..14
    FuncCall@7..14
      Ident@7..12 "count"
      Ascii40@12..13 "("
      Ascii42@13..14 "*"
  Ascii41@14..15 ")"
  Whitespace@15..16 " "
  From@16..20 "from"
  Whitespace@20..21 " "
  RangeVar@21..35
    Ident@21..35 "t_gin_test_tbl"
  Whitespace@35..36 " "
  Where@36..41 "where"
  Whitespace@41..42 " "
  AExpr@42..55
    ColumnRef@42..43
      Ident@42..43 "j"
    Whitespace@43..44 " "
    Op@44..46 "@>"
    Whitespace@46..47 " "
    AArrayExpr@47..55
      Array@47..52 "array"
      Ascii91@52..53 "["
      AConst@53..55
        Iconst@53..55 "50"
  Ascii93@55..56 "]"
  Ascii59@56..57 ";"

