crates/pg_syntax/tests/snapshots/postgres_regress/gin@5.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "select gin_clean_pending_list('gin_test_idx')>10 as many;"
---
SelectStmt@0..57
  Select@0..6 "select"
  Whitespace@6..7 " "
  ResTarget@7..56
    AExpr@7..48
      FuncCall@7..44
        Ident@7..29 "gin_clean_pending_list"
        Ascii40@29..30 "("
        AConst@30..44
          Sconst@30..44 "'gin_test_idx'"
      Ascii41@44..45 ")"
      Ascii62@45..46 ">"
      AConst@46..48
        Iconst@46..48 "10"
    Whitespace@48..49 " "
    As@49..51 "as"
    Whitespace@51..52 " "
    Ident@52..56 "many"
  Ascii59@56..57 ";"

