crates/pg_syntax/tests/snapshots/postgres_regress/gin@52.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "select count(*) from t_gin_test_tbl where j @> '{}'::int[];"
---
SelectStmt@0..59
  Select@0..6 "select"
  Whitespace@6..7 " "
  ResTarget@7..14
    FuncCall@7..14
      Ident@7..12 "count"
      Ascii40@12..13 "("
      Ascii42@13..14 "*"
  Ascii41@14..15 ")"
  Whitespace@15..16 " "
  From@16..20 "from"
  Whitespace@20..21 " "
  RangeVar@21..35
    Ident@21..35 "t_gin_test_tbl"
  Whitespace@35..36 " "
  Where@36..41 "where"
  Whitespace@41..42 " "
  AExpr@42..56
    ColumnRef@42..43
      Ident@42..43 "j"
    Whitespace@43..44 " "
    Op@44..46 "@>"
    Whitespace@46..47 " "
    TypeCast@47..56
      AConst@47..51
        Sconst@47..51 "'{}'"
      Typecast@51..53 "::"
      TypeName@53..56
        IntP@53..56 "int"
  Ascii91@56..57 "["
  Ascii93@57..58 "]"
  Ascii59@58..59 ";"

